MDEV-24730 Insert log operation fails after purge resets n_core_fields

Online log for insert operation of redundant table fails with
index->is_instant() assert. Purge can reset the n_core_fields when
alter is waiting to upgrade MDL for commit phase of DDL. In the
meantime, any insert DML tries to log the operation fails with
index is not being instant.

rec_convert_dtuple_to_temp(): Added n_core_fields as parameter
to indicate the number of core fields to be added in
temporary file record

rec_get_converted_size_temp(): Added n_core_fields as parameter
to indicate the number of core fields to be added in
temporary file record

row0log.cc should use log->n_core_fields for finding the
temporary file record size and also for tuple to
record conversion